@@ -12,8 +12,12 @@
   <metal:javascript fill-slot="javascript_head_slot">
     <script type="text/javascript"
         tal:attributes="src string:${context/portal_url}/++resource++indicators-toc.js">
-     </script>
+    </script>
+
     <script tal:replace="structure context/embed-inline-includes"> </script>
+    <script type="text/javascript" tal:condition="python:context.portal_membership.checkPermission('Modify portal content', context)"
+        tal:attributes="src string:${context/portal_url}/++resource++daviz-inline-resize.js">
+    </script>
 
   <script type="text/javascript">
     jQuery(document).ready(function($){
